--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@angular/platform-server": "^20.2.0",
     "@angular/router": "^20.2.0",
     "@angular/ssr": "^20.2.0",
+    "@ngrx/effects": "^20.0.1",
+    "@ngrx/store": "^20.0.1",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
