--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
+    "semi": false,
+    "arrowParens": "avoid",
     "overrides": [
       {
         "files": "*.html",
@@ -50,6 +52,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.9.2"
   }
 }
