--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@ngrx/effects": "^20.0.1",
     "@ngrx/store": "^20.0.1",
     "express": "^5.1.0",
+    "ngx-cookie-service": "^20.1.1",
+    "ngx-cookie-service-ssr": "^20.1.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
